# aigc-detction

./: .gitignore  MICV_framework.md  README.md  create_manifest.ps1  pyproject.toml
.manual/: move-NTIRE-shards-to-discrete-folder.py
configs/: cluster.yaml  local_2gpu.yaml  local_hybrid_manifest.yaml  local_smoke.yaml  local_train.yaml  smoke.yaml
configs/data/: local_hybrid_manifest.yaml
constraints/: py313-cu130.txt
scripts/: build_manifest.py  evaluate.py  predict.py  preview_transform.py  train.py
src/micv/: __init__.py
src/micv/data/: __init__.py  dataset.py  labels.py  transforms.py
src/micv/models/: __init__.py  backbones.py  heads.py  micv.py
src/micv/training/: __init__.py  distributed.py  losses.py  metrics.py  scheduler.py  trainer.py
src/micv/transforms/: __init__.py  builders.py  compose.py  defaults.py  identity.py  policies.py  registry.py  severity.py
src/micv/utils/: __init__.py  config.py  seed.py
tests/: conftest.py  test_backbones.py  test_build_manifest_hybrid.py  test_committe_independance.py  test_config_settings.py  test_config_smoke.py  test_dataset_images.py  test_dependency_constraints.py  test_distributed_weighted_sampler.py  test_losses.py  test_metrics.py  test_model_shapes.py  test_ntire_transforms.py  test_predict_ground_truth.py  test_scheduler_param_groups.py  test_trainer_accumulation.py  test_trainer_checkpointing.py  test_trainer_logging.py  test_trainer_validation.py
