[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "micv-aigc-detection"
version = "0.1.0"
description = "PyTorch 2.12 guesstimation of MICV framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "transformers>=4.57.6",
    "huggingface-hub>=1.21.0",
    "Pillow>=12.2.0",
    "numpy>=2.5.0",
    "PyYAML>=6.0.3",
    "scikit-learn>=1.9",
    "tqdm>=4.68.3",
]

[project.optional-dependencies]
large-data = ["pandas>=2.3.3", "pyarrow>=22"]
logging = ["tensorboard>=2.20"]
dev = ["pytest>=9.1.1", "ruff>=0.15.20"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]