[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "micv-aigc-detection"
version = "0.1.0"
description = "Reproducible PyTorch implementation of the MICV framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "transformers==5.14.1",
    "huggingface-hub==1.24.0",
    "Pillow==12.2.0",
    "numpy==2.4.6",
    "PyYAML==6.0.3",
    "scikit-learn==1.9.0",
    "tqdm==4.67.3",
    "torch==2.12.1",
    "torchvision==0.27.1",
    "pillow-heif==1.4.0",
    "pillow-jxl-plugin==1.3.8",
    "databuilder[dev,embed,viz]",
]

[tool.uv.sources]
databuilder = { git = "https://github.com/O-J1/databuilder.git" }
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[project.optional-dependencies]
large-data = ["pyarrow==22.0.0"]
logging = ["tensorboard==2.20.0"]
dev = ["pytest==9.1.1", "ruff==0.15.20"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
